--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,18 +5,22 @@ on:
     branches: ["main"]
 
 jobs:
-  build-and-push:
+  build-and-run:
     runs-on: self-hosted
     steps:
+      # Step 1: Checkout code
       - uses: actions/checkout@v5
 
+      # Step 2: Setup Docker Buildx
       - uses: docker/setup-buildx-action@v3
 
+      # Step 3: Login to DockerHub
       - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # Step 4: Build and push Docker image
       - uses: docker/build-push-action@v6
         with:
           context: .
@@ -25,3 +29,19 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ github.sha }}
+
+      # Step 5: Stop old container (if running)
+      - name: Stop old container
+        run: |
+          docker stop myapp-container || true
+          docker rm myapp-container || true
+
+      # Step 6: Run the container mapping ports
+      - name: Run Docker container
+        run: |
+          docker run -d -p 8082:8080 --name myapp-container \
+          ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:latest
+
+      # Step 7: List running containers
+      - name: List running containers
+        run: docker ps -a
